--- a/Lista_de_Tarefa/src/style/home.css
+++ b/Lista_de_Tarefa/src/style/home.css
@@ -15,10 +15,24 @@ body {
     background-color: #EEEEEE;
 }
 
+.menu-bar {
+    gap: 10px;
+}
+
+.findTask {
+    max-width: 250px;
+}
+
+.btn-filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+
 .tarefas {
     background-color: #222831;
-    display: flex;
-    justify-content: space-between;
     padding: 25px;
 }
 
@@ -53,6 +67,7 @@ body {
 .addTask {
     border: none;
     padding: 8px;
+    width: 180px;;
     border-radius: 8px;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
@@ -99,7 +114,7 @@ body {
     background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .modal-content {
@@ -123,7 +138,7 @@ body {
 }
 
 .modal-content h2 {
-    color: #EEEEEE;
+    color: #000;
     margin-bottom: 20px;
 }
 
@@ -162,7 +177,19 @@ body {
 }
 
 .delete-task {
-    background-color: #E5E1DA;
     padding: 10px;
+    border: none;
+    background-color: red;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    transition: 0.2s ease;
 }
 
+.delete-task:hover {
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid red;
+    color: #111;
+    border-radius: 5px;
+}
